--- a/templates/success.html
+++ b/templates/success.html
@@ -14,15 +14,9 @@
                 <p>This python script tests if the email belongs to a disposable domain or not.</p>
             </div>
             <div class="container w-75">
-              <p class="p-3">
-                Thanks for sharing that domain name with us.
-                The domain has been recorded and shall be useful.
-                We shall not forget your contribution.
-              </p>
-              <p>
-                Again, thanks.<br>
-                sd -/<br>
-                Dieter HellStorm
+              <p class="p-3" style="color: black">
+                Domain found. This domain is a disposable domain.
+                <b>{{data}}</b>
               </p>
               <a href="{{url_for('index')}}"><button class="btn button">Home</button></a>
             </div>
